[gd_scene load_steps=5 format=3 uid="uid://d4g2b8jj23sj5"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_8newk"]
[ext_resource type="Texture2D" uid="uid://dsmetf54l55ok" path="res://botoes/64px/Close_64.png" id="3_j5eso"]
[ext_resource type="Texture2D" uid="uid://bwgd31otm2pd2" path="res://botoes/64px/Restart_64.png" id="4_eoe4w"]
[ext_resource type="Texture2D" uid="uid://d3d6sfd2au728" path="res://botoes/64px/Back_64.png" id="4_k263u"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_8newk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -176.0
offset_right = 101.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="rein" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "REINICIAR
"
icon = ExtResource("4_eoe4w")

[node name="voltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 18
text = "VOLTAR"
icon = ExtResource("3_j5eso")

[node name="sair" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "SAIR"
icon = ExtResource("4_k263u")

[connection signal="pressed" from="VBoxContainer/rein" to="." method="_on_rein_pressed"]
[connection signal="pressed" from="VBoxContainer/voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_button_pressed"]
